Closed Bug 1179982 Opened 9 years ago Closed 9 years ago

Fix all compile errors in dom/workers on non-unified build

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla42
Tracking Status
firefox42 --- fixed

People

(Reporter: hiro, Assigned: hiro)

Details

Attachments

(1 file)

Attached patch FixSplinter Review
This bug is another variant of bug 1178172.

Actually I am not suffering from compile errors in dom/workers now, but this is for other guys or my future self.

https://treeherder.mozilla.org/#/jobs?repo=try&revision=cf98a3564c46

mrbkap, could you please review this (since your review queue is now empty)?
Attachment #8629096 - Flags: review?(mrbkap)
Attachment #8629096 - Flags: review?(mrbkap) → review+
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/4ae685c946de
Assignee: nobody → hiikezoe
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla42
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: