Bug 1179982 - Fix all compile errors in dom/workers on non-unified build. r=mrbkap